chore: revert Jackson upgrade for springboot from 3 back to 2